2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: Fixed "Bug
	  543970 - "Goto class part" pad is not focused".

2009-09-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CodeGeneration/WriteLineGenerator.cs: better
	  sort order in writeline code generator: local vars ->
	  parameters -> members. (this is the opposite of the old
	  one).

2009-09-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Added support for creating an method in an interface type.

2009-09-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/HelperMethods.cs: Fixed failing unit
	  tests.

2009-09-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/HelperMethods.cs:
	  InnerClassTypeReferences now get properly converted.

2009-09-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Don't NRE when command is not key-bound.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Refactoring/RefactoryCommands.cs:
	* MonoDevelop.Refactoring/RefactoringOptions.cs:
	* MonoDevelop.CodeGeneration/PropertyGenerator.cs:
	* MonoDevelop.CodeGeneration/ToStringGenerator.cs:
	* MonoDevelop.CodeGeneration/NullCheckGenerator.cs:
	* MonoDevelop.CodeGeneration/WriteLineGenerator.cs:
	* MonoDevelop.Refactoring/FindReferencesHandler.cs:
	* MonoDevelop.Refactoring/GotoDeclarationHandler.cs:
	* MonoDevelop.CodeGeneration/AbstractGenerateAction.cs:
	* MonoDevelop.CodeGeneration/EqualityMembersGenerator.cs:
	* MonoDevelop.CodeGeneration/OverrideMembersGenerator.cs:
	* MonoDevelop.CodeGeneration/RaiseEventMethodGenerator.cs:
	* MonoDevelop.CodeGeneration/CreateConstructorGenerator.cs:
	* MonoDevelop.Refactoring/AbstractRefactoringCommandHandler.cs:
	* MonoDevelop.Refactoring.CreateClass/CreateClassCodeGenerator.cs: